# mliot-embeddedc-2026-hw

week01/: week1_HoangBuiNghiaDung.c
week02/: answer.txt  week2_HoangBuiNghiaDung.c
week03/: answers.txt  build_and_flash.bat
week04/: answers.txt
week04/Task3_Blink_Led/: main.c
week04/Task3_Blink_Led/cmake/: gcc-arm-none-eabi.cmake
week04/Task4_Button_Debounce/: main.c  text.txt
week04/Task5_Matrix_Led_2x2/: CMakeLists.txt  main.c
